--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/styled-engine-sc": "^5.10.16",
+    "@next/font": "^13.0.6",
     "email-validator": "^2.0.4",
+    "emoji-picker-react": "^4.4.7",
     "firebase": "^9.14.0",
+    "link-preview-js": "^3.0.4",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-player": "^2.11.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.3"
   },
